fixed overflow i planetDetails.css

--- a/src/styles/componentsStyles/planetDetails.css
+++ b/src/styles/componentsStyles/planetDetails.css
@@ -12,11 +12,10 @@
 
 .planetDetailsWrapper {
   width: 65vw;
-  height: 75vh;
+  height: 85vh;
   border: 0.7rem solid rgb(255, 255, 255);
   position: absolute;
   bottom: 6vh;
-  overflow: visible;
   display: flex;
   flex-direction: column;
 }
@@ -33,6 +32,7 @@
   padding: 1.5rem;
   box-sizing: border-box;
   font-size: large;
+  overflow: auto;
 }
   
 .planetMoon {
@@ -40,6 +40,7 @@
   padding: 1.5rem;
   box-sizing: border-box;
   font-size: large;
+  overflow: auto;
 }
 
 .planetDetails h2 {
@@ -58,7 +59,7 @@
   left: 0;
   padding: 1.5rem;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: auto;
   border-top: 0.3rem solid rgb(255, 255, 255);
   font-size: large;
 }
